--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ShadowRealm - Эпическая RPG Игра</title>
+    <title>Sealed Gate - Эпическая RPG Игра</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logo.png" alt="ShadowRealm" class="logo">
-                <span class="brand-text">ShadowRealm</span>
+                <img src="images/logo.png" alt="Sealed Gate" class="logo">
+                <span class="brand-text">Sealed Gate</span>
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -43,8 +43,7 @@
                     </li>
                 </ul>
                 <div class="nav-buttons ms-3">
-                    <a href="#" class="btn btn-white me-2">Трейлер</a>
-                    <a href="#" class="btn btn-brown">Играть сейчас</a>
+                    <a href="#" class="btn btn-brown">Войти</a>
                 </div>
             </div>
         </div>
@@ -61,11 +60,11 @@
                 <div class="col-lg-6">
                     <div class="hero-content">
                         <div class="game-info">
-                            <h1 class="game-title">ShadowRealm</h1>
-                            <p class="developer">Dark Studio Games</p>
+                            <h1 class="game-title">Sealed Gate</h1>
+                            <p class="developer">ООО "Тортила Геймс"</p>
                             <div class="game-tags">
-                                <span class="tag">Action</span>
-                                <span class="tag">Adventure</span>
+                                <span class="tag">Экшен</span>
+                                <span class="tag">Приключение</span>
                                 <span class="tag">RPG</span>
                             </div>
                         </div>
@@ -83,7 +82,7 @@
                         <div class="hero-actions">
                             <a href="#" class="btn btn-brown btn-lg me-3">
                                 <i class="fas fa-download"></i>
-                                Купить сейчас
+                                Играть бесплатно
                             </a>
                             <a href="#" class="btn btn-white btn-lg">
                                 <i class="fas fa-play"></i>
@@ -195,7 +194,7 @@
                     <h2 class="section-title">Об игре</h2>
                     <div class="about-content">
                         <p class="lead">
-                            ShadowRealm - это эпическая RPG-игра, которая перенесет вас в мир магии, 
+                            Sealed Gate - это эпическая RPG-игра, которая перенесет вас в мир магии, 
                             приключений и бесконечных возможностей. Создайте своего уникального героя 
                             и отправляйтесь в незабываемое путешествие.
                         </p>
@@ -502,11 +501,11 @@
                 <div class="col-lg-6">
                     <div class="footer-content">
                         <div class="footer-logo">
-                            <img src="images/logo.png" alt="ShadowRealm" class="logo">
-                            <span class="brand-text">ShadowRealm</span>
+                            <img src="images/logo.png" alt="Sealed Gate" class="logo">
+                            <span class="brand-text">Sealed Gate</span>
                         </div>
                         <p class="footer-description">
-                            Погрузитесь в мир приключений и магии. ShadowRealm - это игра, 
+                            Погрузитесь в мир приключений и магии. Sealed Gate - это игра, 
                             которая изменит ваше представление о RPG жанре.
                         </p>
                         <div class="social-links">
