--- a/index.html
+++ b/index.html
@@ -549,7 +549,10 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <p class="copyright">
-                        © 2025 Dark Studio Games. Все права защищены.
+                        ООО "Тортила Геймс" ОГРН: 1242300001680 ИНН: 2366046297 от 18.01.2024 354065, 
+                        Краснодарский край, г Сочи, Красноармейская ул, д. 16, помещ. 1-3 
+                        <a href="mailto:support@sealedgate.ru">support@sealedgate.ru</a>, 
+                        <a href="mailto:partner@sealedgate.ru">partner@sealedgate.ru</a>
                     </p>
                 </div>
                 <div class="col-lg-6 text-lg-end">
